edited pref images, fixed grid system on mobile, added opacity to top nav

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ html {
   grid-template-columns: [edge-start] minmax(1rem, 10rem) [content-start] auto 1fr repeat(3,auto) [content-end] minmax(1rem, 10rem) [edge-end];
   grid-column-gap: 1.5rem;
   padding: 0;
-  background: white;
+  background: rgb(255,255,255,.9);
   font-size: 18px;
   align-items: center;
   height: 110px;
@@ -43,7 +43,7 @@ html {
   font-size: 18px;
   text-decoration: none;
   padding: 0;
-  background: white;
+  background: transparent;
   border: none;
   color: black;
   }
@@ -478,8 +478,9 @@ backface-visibility: hidden;
 .bio p {
   grid-column: 4/10;
   padding-top: 20px;
-  margin: auto;
+  margin: auto 0px;
   line-height: 200%;
+  text-align: left;
 }
 
 /* about section for phones */
